unpackaged/objects/ServiceFlow__c.object
<CustomObject>
  <customSettingsType>List</customSettingsType>
  <description>Used to enforce custom rules for the Service Cloud flow</description>
  <fields>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active/Inactive</description>
    <label>Active</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply checkbox for basic rules without criteria</description>
    <label>Apply</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Country2Digits__c</fullName>
    <description>US
CA
DE</description>
    <label>Country 2 Digits</label>
    <length>2</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Criteria1__c</fullName>
    <label>Criteria 1</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Criteria2__c</fullName>
    <label>Criteria 2</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Criteria3__c</fullName>
    <label>Criteria 3</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>RuleType__c</fullName>
    <description>- EmailConsent
- RequiredContact
....
....</description>
    <label>Rule Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <label>Service Cloud Flow</label>
</CustomObject>